--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>011100</title>
+		<title>0111100</title>
 		
 		<link rel="stylesheet" type="text/css" href="dist/css/homepage.css"/>
 	</head>
@@ -16,7 +16,7 @@
 					</li>
 					<li class="header-nav-li">
 						<a href="#">
-							<h3>企业文化</h3>
+							<h3>小鸟掌学</h3>
 							<span><img src="dist/img/images/nav_downarrow.png"/></span>
 						</a>
 						<ul class="header-nav-li-drop-down">
@@ -67,9 +67,24 @@
 		</header>
 		<div class="banner">
 			<img class="banner-bg" src="dist/img/images/banner01_bg.jpg"/>
-			<img class="banner-bg1" src="dist/img/images/banner01_01.png"/>
-			<img class="banner-bg1" src="dist/img/images/banner01_02.png"/>
-			<img class="banner-bg1" src="dist/img/images/banner01_03.png"/>
+			<div class="animate">
+				<div class="banner-animate">
+					<img class="banner-bg-a" src="dist/img/images/banner01_01.png"/>
+					<img class="banner-bg-b" src="dist/img/images/banner01_02.png"/>
+					<img class="banner-bg-c" src="dist/img/images/banner01_03.png"/>
+				</div>
+				<div class="banner-animate1">
+					<img class="banner-bg-d" src="dist/img/images/banner02_01.png"/>
+					<img class="banner-bg-e" src="dist/img/images/banner02_02.png"/>
+					<img class="banner-bg-f" src="dist/img/images/banner02_03.png"/>
+				</div>
+				<div class="banner-animate2">
+					<img class="banner-bg-g" src="dist/img/images/banner03_01.png"/>
+					<img class="banner-bg-h" src="dist/img/images/banner03_02.png"/>
+					<img class="banner-bg-c" src="dist/img/images/banner01_03.png"/>
+				</div>
+			</div>
+			
 			<div class="banner-bottom">
 				<img class="banner-bottom-left" src="dist/img/images/prev_Arrow.png"/>
 				
